# ray-tracing

./: .gitignore  Cargo.toml  README.md  TODO.md  square.mtl  teapot.mtl
scenes/: cornell-box.mtl  dragon.mtl  mirascope.mtl  teapot-circle.mtl  teapot.mtl
shaders/: main.wgsl  misc.wgsl  random.wgsl  ray.wgsl  render.wgsl  types.wgsl  vertex.wgsl
src/: app.rs  bvh.rs  camera.rs  consts.rs  main.rs  misc.rs  scene.rs  types.rs  ui.rs
src/shaders/: render.wgsl
