[package]
name = "ray-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
compute = { git = "https://github.com/connorslade/compute", features = [
    "interactive",
] }

anyhow = "1.0.95"
encase = { version = "0.10.0", features = ["nalgebra"] }
ordered-float = "4.6.0"
plexus = "0.0.11"
tobj = "4.0.3"
image = "0.25.5"
